--- a/html/index.html
+++ b/html/index.html
@@ -1,22 +1,25 @@
 <html>
-	<head>
-		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
-		<link href="style.css" rel="stylesheet" type="text/css" />
-	</head>
+<head>
+	<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
+	<link href="style.css" rel="stylesheet" type="text/css"/>
+</head>
 
-	<body>
-		<div class="dialog">
-			<form id="register">
-				<h1>Register</h1>
-				<input id="firstname" type="text" placeholder="First name"><br>
-				<input id="lastname" type="text" placeholder="Last name"><br>
-				<input id="dateofbirth" type="text" placeholder="Date of Birth (YYYY-MM-DD)"><br>
-				<input id="height" type="text" placeholder="Height (140-200 cm)"><br><center>
-				<input type="radio" name="sex" value="m" checked>Male
-				<input type="radio" name="sex" value="f">Female<br></center>
-				<button id="submit" type="submit">Create</button>
-			</form>
+<body>
+<div class="dialog">
+	<form id="register">
+		<h1>Register</h1>
+		<input id="firstname" type="text" placeholder="First name"><br>
+		<input id="lastname" type="text" placeholder="Last name"><br>
+		<input id="dateofbirth" type="date" placeholder="Date of Birth (YYYY-MM-DD)"><br>
+		<input id="height" type="number" max="200" min="140" placeholder="Height (140-200 cm)"><br>
+		<div align="center">
+			<label><input type="radio" name="sex" value="m" checked>Male</label>
+			<label><input type="radio" name="sex" value="f">Female<br></label>
 		</div>
-		<script src="script.js" type="text/javascript"></script>
-	</body>
+
+		<button id="submit" type="submit">Create</button>
+	</form>
+</div>
+<script src="script.js" type="text/javascript"></script>
+</body>
 </html>
