change html and ressource languages

--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,9 @@
 
 <body>
 <div class="dialog">
-	<form id="register">
+	<form id="register" novalidate autocomplete="off">
 		<h1>Register</h1>
-		<input id="firstname" type="text" placeholder="First name"><br>
+		<input id="firstname" type="text" placeholder="First name" autofocus><br>
 		<input id="lastname" type="text" placeholder="Last name"><br>
 		<input id="dateofbirth" type="date" placeholder="Date of Birth (YYYY-MM-DD)"><br>
 		<input id="height" type="number" max="200" min="140" placeholder="Height (140-200 cm)"><br>
